# reciva-dlna-stream

./: .gitignore  AGENTS.md  LICENSE  README.md  dlna-stream.sh  example-config.json  pyproject.toml  reciva-dlna-stream.sh  setup.sh
.github/workflows/: test.yml
.maki/: permissions.toml
deploy/: install.sh
deploy/systemd/: reciva-dlna-stream.default  reciva-dlna-stream.service
dlna_stream/: __init__.py  __main__.py  forwarder.py  server.py  server_lifecycle.py
reciva_dlna_stream/: __init__.py  __main__.py  forwarder.py  server.py  server_lifecycle.py  stream_config.py
requirements/: README.md  REQ-0-non-functional.md  REQ-1-discovery.md  REQ-2-content-directory.md  REQ-3-stream-serving.md  REQ-4-lifecycle.md  REQ-5-multi-stream.md  REQ-6-deployment.md
specification/: AGENTS.md  architecture.md  deployment.md  forwarder.md  radio-behavior.md  server-lifecycle.md  server.md  testing.md
tests/: conftest.py  test_integration.py
