[project]
name = "reciva-dlna-stream"
version = "0.1.0"
description = "DLNA media server highly tailored to serve a Reciva-based internet radio"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "async-upnp-client>=0.47.0",
    "aiohttp>=3.9.0",
]

[project.scripts]
reciva-dlna-stream = "reciva_dlna_stream.__main__:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["reciva_dlna_stream*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
log_cli = true
log_cli_level = "INFO"
